pontoon/base/static/css/translate.css
/* ... */
#plural-tabs ul li a {
  display: block;
  padding: 10px;
}

#plural-tabs ul li a sup {
  color: #7BC876;
  font-size: 11px;
  font-weight: 400;
  padding-left: 1px;
}

#editor #single > menu {
  background: #272A2F;
  border-bottom: 1px solid #5E6475;
  padding: 10px;
  position: relative;
  text-align: right;
}

.warning-overlay {
  background: #272A2F;
  border-top: 1px solid #5E6475;
  bottom: 0;
  display: none;
  left: 0;
  min-height: 90px;
  padding: 10px;
  position: absolute;
  text-align: left;
  width: 100%;

  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

.warning-overlay .cancel {
  color: #AAAAAA;
  float: right;
  font-size: 24px;
  font-weight: 100;
  margin-top: -1px;
}

.warning-overlay .cancel:hover {
  color: #FFFFFF;
}

.warning-overlay h2 {
  color: #F36;
}

.warning-overlay #save-anyway,
.warning-overlay #leave-anyway {
  bottom: 10px;
  position: absolute;
  right: 10px;
}

#unsaved p {
  font-style: italic;
}

#quality ul {
  font-style: italic;
  list-style: none;
  margin: 0px;
  width: calc(100% - 140px);
}

#quality ul i {
  font-size: 18px;
  margin: 0px 8px;
  vertical-align: text-bottom;
}

#quality .warning {
  color: #AAAAAA;
}

#quality .warning i {
  color: #4D5967;
}

#quality .error i {
  color: #F36;
}

#editor #single #ftl {
  color: #AAAAAA;
  float: left;
  font-size: 18px;
  font-weight: bold;
  line-height: 0;
  padding: 10px 5px 10px 0;
}

#editor #single #ftl.active,
#editor #single #ftl:hover {
  color: #7BC876;
}

#translation-length {
  color: #AAAAAA;
  display: none;
  float: left;
  line-height: 22px;
  padding: 9px 5px;
}

#translation-length .countdown {
  display: none;
}

#translation-length .countdown .overflow {
  color: #F36;
}

#editor #single > menu > .read {
  display: none;
}

#editor #single > menu > .write {
  display: block;
}

#editor #single.readonly > menu > .read {
  display: block;
}

#editor #single.readonly > menu > .write {
  display: none;
}

#editor #single > menu > .write > .select {
  cursor: pointer;
  position: static; /* Avoid overlapping warning box */
}

#editor #single > menu > .write > .select .selector {
  color: #AAAAAA;
  font-size: 22px;
  padding: 9px 5px;
}

#editor #single > menu > .write > #settings.select .selector {
  padding-left: 0;
}

#editor #single > menu > .write > .select .selector:hover {
  color: #7BC876;
}

#hotkeys .menu {
  width: 400px;
  height: 400px;
  left: 0;
  top: 0;
  bottom: 0;
  right: 0;
  position: fixed;
  margin: auto;
  padding: 10px 24px;
}

#hotkeys h2 {
  font-size: 20px;
  padding-bottom: 30px;
  text-align: center;
}

#hotkeys table {
  width: 100%;
}

#hotkeys td {
  padding: 0;
}

#hotkeys td:first-child {
  font-weight: 300;
  height: 35px;
  width: 60%;
}

#hotkeys td:last-child {
  white-space: nowrap;
}

#hotkeys span {
  background: #3F4752;
  border: 1px solid #5E6475;
  border-radius: 2px;
  font-weight: 300;
  margin: 0 4px;
  padding: 0 4px;
}

#editor #single > menu button {
  background: transparent;
  border: none;
  color: #EBEBEB;
  height: 40px;
  padding: 10px 3px;
  text-transform: uppercase;
}

#editor #single > menu button#add-attribute {
  display: none;
}

#editor #single > menu button[id^="save"],
#editor #single > menu button#leave-anyway {
  background: #7BC876;
  border-radius: 3px;
  color: #272A2F;
  font-weight: 600;
  margin-left: 10px;
  padding: 10px;
}

#editor #single > menu button[id^="save"].suggest {
  background: #4FC4F6;
}

#save:before {
  content: "Save";
}

#save.suggest:before {
  content: "Suggest";
}

#save-anyway:before {
  content: "Save anyway";
}

#save-anyway.suggest:before {
  content: "Suggest anyway";
}

#editor #single > menu button#save-anyway.suggest.approve {
  background: #7BC876;
}

#save-anyway.approve:before {
  content: "Approve anyway";
}

#editor #single > menu p.banner {
  font-style: italic;
  line-height: 40px;
}

#editor #single > menu p.banner > a {
  color: #7BC876;
}

#editor #single > menu button#leave-anyway {
  background: #FF0A43;
  color: #EBEBEB;
}

#editor #single > menu button:hover {
  color: #7BC876;
}

#editor #single > menu button[id^="save"]:hover {
  color: #EBEBEB;
}

#editor #single > menu button#leave-anyway:hover {
  color: #272A2F;
}

#helpers {
  background: #3F4752;
  height: calc(100% - 300px);
  position: relative;
}

#source-pane.pluralized ~ #helpers {
  height: calc(60% - 147px);
}

#helpers > section {
  bottom: 0;
  left: 0;
  overflow-y: auto;
  padding-top: 1px;
  position: absolute;
  right: 0;
  top: 43px;
}

#helpers > section.history {
  display: block;
  padding: 0;
  top: 0;
}

#helpers > section.machinery input[type=search] {
  padding-left: 10px;
}

#helpers > section ul li {
  cursor: pointer;
  padding-left: 10px;
  padding-right: 10px;
  transition: all 0.1s ease-out;
}

#helpers > section ul li.delete {
  -webkit-transform: scale(0); /* MANDATORY! Or transitionend in translate.js triggered too late */
  transform: scale(0);
}

#helpers > section.history ul li {
  padding-bottom: 15px;
  padding-top: 15px;
}

#helpers > section > ul > li:not(.disabled):not(.show-comments):hover,
#helpers > section > ul > li:not(.disabled):not(.show-comments).hover {
  background: #4D5967;
  border-color: #5E6475;
}

#helpers > section ul li.disabled {
  cursor: default;
  padding-bottom: 15px;
  padding-top: 15px;
}

#helpers > section ul li.preferred {
  border-bottom-color: #7BC876;
}

#helpers > section ul li > header .info {
  float: left;
}

#helpers > section ul li > header .comments {
  margin-right: 6px;
}

#helpers > section ul li > header .toggle-diff.active {
  color: #7BC876;
}

#helpers > section ul li > header .toolbar {
  float: right;
  margin-right: 3px;
}

#helpers > section.history ul li > header .stress,
#helpers > section.other-locales ul li > header .stress {
  padding-right: 0;
}

#helpers > section ul li > header .avatar {
  float: left;
  height: 0;
  margin-top: 4px;
  position: relative;
}
/* ... */

